src/test/resources/valid/numeric/NUM.cpy
           05 EMP-SURNAME PIC 99.
           05 EMP-POSITION PIC 9.