src/test/resources/invalid/default-value/DEFVALUEINV.cpy
           05 EMP-SURNAME PIC XX VALUE 'AAA'.
           05 EMP-SALARY PIC 99 COMP VALUE 1.
           05 EMP-POSITION PIC 9 VALUE 0.